fix: add jacoco plugin to pom.xml in /ui
also removed manual configuration of argline from surefire plugin in /ui/pom.xml
this is now done automatically by jacoco plugin
manual plugin configuration disturbed jacoco build