@@ -81,12 +81,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
+
+                <!-- This manual configuration disturbed Jacoco plugin
+                argline is automatically added by Jacoco plugin -->
+                <!-- <configuration>
                     <argLine>
-                        --add-opens ui/ui=ALL-UNNAMED 
-                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        add-opens ui/ui=ALL-UNNAMED 
+                        add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                     </argLine>
-                </configuration>
+                </configuration> -->
             </plugin>
 
             <!-- JavaFX Maven Plugin -->
@@ -97,6 +100,26 @@
                 <configuration>
                     <mainClass>ui.KollApp</mainClass>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.10</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
